<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <!-- 顶部操作栏 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:padding="4dp">

        <Button
            android:id="@+id/clear_webview"
            style="@style/AppButton.Secondary"
            android:text="@string/action_clear_webview" />
    </LinearLayout>

    <!-- WebView区域 -->
    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginVertical="@dimen/button_margin"
        android:background="@android:color/white"
        android:elevation="1dp"
        android:visibility="visible" />

    <!-- 底部操作栏 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="4dp">

        <Button
            android:id="@+id/setQingLongButton"
            style="@style/AppButton.Secondary"
            android:text="@string/qinglong_setting" />

        <EditText
            android:id="@+id/ql_env_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/button_margin"
            android:layout_weight="1"
            android:hint="自定义变量名"
            android:inputType="text"
            android:padding="@dimen/edittext_padding"
            android:background="@drawable/edittext_bg"
            android:minHeight="@dimen/edittext_min_height"/>

        <Button
            android:id="@+id/uploadCookieButton"
            style="@style/AppButton"
            android:text="@string/action_upload" />
    </LinearLayout>

</LinearLayout>
